syntax = "proto3";

package account;

service Account {

  rpc AddAccount (NewAccountRequest) returns (NewAccountResponse) {}

  rpc HandleData (HandleDataRequest) returns (HandleDataResponse) {}

  rpc TrackConnection (ConnectionRequest) returns (ConnectionResponse) {}

  rpc UntrackConnection (ConnectionRequest) returns (ConnectionResponse) {}

}

message AccountInfo {
    string relation = 1;
    int32 assetScale = 2;
    string assetCode = 3;
    string plugin = 4;

    AccountOptions options = 5;
}

message AccountOptions {

    AccountOptionsInfo info = 1;
    string account = 2;
    int32 balance = 3;

}

message AccountOptionsInfo {
    string prefix = 1;
}

message NewAccountRequest {
    string id = 1;

    AccountInfo info = 2;
}

message NewAccountResponse {

}

message HandleDataRequest {
    string accountId = 1;
    bytes buffer = 2;
}

message HandleDataResponse{
    bytes buffer = 1;
    string error = 2;
}

message ConnectionRequest{
    string accountId = 1;
}

message ConnectionResponse{

}
